fixed alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,6 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  font-family: lato;
 }
 
 .App-header {
@@ -13,86 +9,49 @@
   padding: 20px;
   color: white;
 }
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-/*
- * fade-in animation for twitcher entries
- */
-.example-appear {
-  opacity: 0.01;
-}
-
-.example-appear.example-appear-active {
-  opacity: 1;
-  transition: opacity .5s ease-in;
-}
-
 a {
     text-align: left;
     text-decoration: none;
     color: black;
 }
+.table {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+}
 
-/*
- * container for one twitcher entry
- */
-.avatar-container {
-    text-align: center;
-    width: 50%;
-    height: 400px;
-    margin: 0 auto;
-    position: relative;
-}
-.twitcher-title {
-    margin-bottom: 20px;
-    width:300px;
-    height:50px;
-    position:absolute;
-    top:0;
-    left: 33%;
-}
-.twitcher-profile-overlay,
+/* container for channel image and info*/
 .avatar {
-    width: 300px;
-    height: 300px;
-    position: absolute;
-    top: 50px;
-    left: 33%;
+    flex-grow:0;
+    width:300px;
+    position:relative;
+    margin:auto;
+    margin-top:5%;
 }
-/*
- * on mouse over, displays stream details
- */
+/* channel info will be hidden by default*/
 .twitcher-profile-overlay {
-    text-align: center;
-    z-index:-10;
+    position: absolute;
+    height:100%;
+    top: 0%;
+    left:0;
+    right:0;
+    margin: auto;
+    z-index:-2;
     color:white;
-    border-radius: 15px;
-    background-color: #000;
+    background-color:#000;
 }
-.twitcer-profile-overlay:hover {
+/* show channel info on hover*/
+.twitcher-profile-overlay:hover {
     z-index:10;
 }
-/*
- * twitcher avatar
- */
 .avatar img {
-    border-radius: 15px;
-    opacity: 1;
+    opacity:1;
     z-index:10;
-    transition: opacity 1s;
+    transition: opacity 0.5s;
 }
-/*
- * on hover, we decrease opacity to display details about the stream on overlay
- */
+/* image will fade away on hover to show channel info*/
 .avatar img:hover {
-    opacity: 0.1;
-    transition: opacity 1s;
-    z-index:-10;
+    opacity:0.5;
+    transition: opacity 0.5s;
+    z-index:-2;
 }
